# serializer version: 1
# name: test_example_snapshot[example-aggregation]
  dict({
    'events': list([
      dict({
        'graph': dict({
          'audio': dict({
            'feature_spec': dict({
              'deps': list([
              ]),
              'fields': list([
                dict({
                  'code_version': '__metaxy_initial__',
                  'deps': list([
                  ]),
                  'key': 'default',
                }),
              ]),
              'id_columns': list([
                'audio_id',
              ]),
              'key': 'audio',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'default': '80200592cc6accc65ee0b09a7fcf4082c729a0b919cd9c3edf088eb94f27a60c',
            }),
            'metaxy_feature_version': 'c97627054100197ec6c746b0305a630569f2f13968aa53b610100a01f0991908',
          }),
          'speaker/embedding': dict({
            'feature_spec': dict({
              'deps': list([
                dict({
                  'columns': None,
                  'feature': 'audio',
                  'fields_mapping': dict({
                    'mapping': dict({
                      'exclude_fields': list([
                      ]),
                      'match_suffix': False,
                      'type': 'default',
                    }),
                  }),
                  'lineage': dict({
                    'relationship': dict({
                      'on': list([
                        'speaker_id',
                      ]),
                      'type': 'N:1',
                    }),
                  }),
                  'optional': False,
                  'rename': None,
                  'sql_filters': None,
                }),
              ]),
              'fields': list([
                dict({
                  'code_version': '1',
                  'deps': list([
                  ]),
                  'key': 'embedding',
                }),
              ]),
              'id_columns': list([
                'speaker_id',
              ]),
              'key': 'speaker/embedding',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'embedding': '8b5b20fb5aab8799f1fbf969e97e71540801d94cae081a6dbef6acbf941fd71a',
            }),
            'metaxy_feature_version': '83296faf60084eb70f7d1976367ffcc541f1149195b79bebe46dbb98a50f3bdd',
          }),
        }),
        'scenario_name': 'Initial pipeline run',
        'snapshot_version': 'd20c6813866c39ff989eee8e5d45f93f061943fe13f5a65311ff987fc7f1d7cc',
        'step_name': None,
        'type': 'graph_pushed',
      }),
      dict({
        'command': 'python pipeline.py',
        'returncode': 0,
        'scenario_name': 'Initial pipeline run',
        'step_name': 'run_pipeline',
        'type': 'command_executed',
      }),
      dict({
        'command': 'python pipeline.py',
        'returncode': 0,
        'scenario_name': 'Idempotent rerun',
        'step_name': None,
        'type': 'command_executed',
      }),
      dict({
        'graph': dict({
          'audio': dict({
            'feature_spec': dict({
              'deps': list([
              ]),
              'fields': list([
                dict({
                  'code_version': '__metaxy_initial__',
                  'deps': list([
                  ]),
                  'key': 'default',
                }),
              ]),
              'id_columns': list([
                'audio_id',
              ]),
              'key': 'audio',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'default': '80200592cc6accc65ee0b09a7fcf4082c729a0b919cd9c3edf088eb94f27a60c',
            }),
            'metaxy_feature_version': 'c97627054100197ec6c746b0305a630569f2f13968aa53b610100a01f0991908',
          }),
          'speaker/embedding': dict({
            'feature_spec': dict({
              'deps': list([
                dict({
                  'columns': None,
                  'feature': 'audio',
                  'fields_mapping': dict({
                    'mapping': dict({
                      'exclude_fields': list([
                      ]),
                      'match_suffix': False,
                      'type': 'default',
                    }),
                  }),
                  'lineage': dict({
                    'relationship': dict({
                      'on': list([
                        'speaker_id',
                      ]),
                      'type': 'N:1',
                    }),
                  }),
                  'optional': False,
                  'rename': None,
                  'sql_filters': None,
                }),
              ]),
              'fields': list([
                dict({
                  'code_version': '1',
                  'deps': list([
                  ]),
                  'key': 'embedding',
                }),
              ]),
              'id_columns': list([
                'speaker_id',
              ]),
              'key': 'speaker/embedding',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'embedding': '8b5b20fb5aab8799f1fbf969e97e71540801d94cae081a6dbef6acbf941fd71a',
            }),
            'metaxy_feature_version': '83296faf60084eb70f7d1976367ffcc541f1149195b79bebe46dbb98a50f3bdd',
          }),
        }),
        'scenario_name': 'Update one audio - only affected speaker recomputed',
        'snapshot_version': 'd20c6813866c39ff989eee8e5d45f93f061943fe13f5a65311ff987fc7f1d7cc',
        'step_name': None,
        'type': 'graph_pushed',
      }),
      dict({
        'after_graph': dict({
          'audio': dict({
            'feature_spec': dict({
              'deps': list([
              ]),
              'fields': list([
                dict({
                  'code_version': '__metaxy_initial__',
                  'deps': list([
                  ]),
                  'key': 'default',
                }),
              ]),
              'id_columns': list([
                'audio_id',
              ]),
              'key': 'audio',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'default': '80200592cc6accc65ee0b09a7fcf4082c729a0b919cd9c3edf088eb94f27a60c',
            }),
            'metaxy_feature_version': 'c97627054100197ec6c746b0305a630569f2f13968aa53b610100a01f0991908',
          }),
          'speaker/embedding': dict({
            'feature_spec': dict({
              'deps': list([
                dict({
                  'columns': None,
                  'feature': 'audio',
                  'fields_mapping': dict({
                    'mapping': dict({
                      'exclude_fields': list([
                      ]),
                      'match_suffix': False,
                      'type': 'default',
                    }),
                  }),
                  'lineage': dict({
                    'relationship': dict({
                      'on': list([
                        'speaker_id',
                      ]),
                      'type': 'N:1',
                    }),
                  }),
                  'optional': False,
                  'rename': None,
                  'sql_filters': None,
                }),
              ]),
              'fields': list([
                dict({
                  'code_version': '1',
                  'deps': list([
                  ]),
                  'key': 'embedding',
                }),
              ]),
              'id_columns': list([
                'speaker_id',
              ]),
              'key': 'speaker/embedding',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'embedding': '8b5b20fb5aab8799f1fbf969e97e71540801d94cae081a6dbef6acbf941fd71a',
            }),
            'metaxy_feature_version': '83296faf60084eb70f7d1976367ffcc541f1149195b79bebe46dbb98a50f3bdd',
          }),
        }),
        'after_snapshot': 'd20c6813866c39ff989eee8e5d45f93f061943fe13f5a65311ff987fc7f1d7cc',
        'before_graph': dict({
          'audio': dict({
            'feature_spec': dict({
              'deps': list([
              ]),
              'fields': list([
                dict({
                  'code_version': '__metaxy_initial__',
                  'deps': list([
                  ]),
                  'key': 'default',
                }),
              ]),
              'id_columns': list([
                'audio_id',
              ]),
              'key': 'audio',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'default': '80200592cc6accc65ee0b09a7fcf4082c729a0b919cd9c3edf088eb94f27a60c',
            }),
            'metaxy_feature_version': 'c97627054100197ec6c746b0305a630569f2f13968aa53b610100a01f0991908',
          }),
          'speaker/embedding': dict({
            'feature_spec': dict({
              'deps': list([
                dict({
                  'columns': None,
                  'feature': 'audio',
                  'fields_mapping': dict({
                    'mapping': dict({
                      'exclude_fields': list([
                      ]),
                      'match_suffix': False,
                      'type': 'default',
                    }),
                  }),
                  'lineage': dict({
                    'relationship': dict({
                      'on': list([
                        'speaker_id',
                      ]),
                      'type': 'N:1',
                    }),
                  }),
                  'optional': False,
                  'rename': None,
                  'sql_filters': None,
                }),
              ]),
              'fields': list([
                dict({
                  'code_version': '1',
                  'deps': list([
                  ]),
                  'key': 'embedding',
                }),
              ]),
              'id_columns': list([
                'speaker_id',
              ]),
              'key': 'speaker/embedding',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'embedding': '8b5b20fb5aab8799f1fbf969e97e71540801d94cae081a6dbef6acbf941fd71a',
            }),
            'metaxy_feature_version': '83296faf60084eb70f7d1976367ffcc541f1149195b79bebe46dbb98a50f3bdd',
          }),
        }),
        'before_snapshot': 'd20c6813866c39ff989eee8e5d45f93f061943fe13f5a65311ff987fc7f1d7cc',
        'patch_path': 'patches/01_update_audio_provenance.patch',
        'scenario_name': 'Update one audio - only affected speaker recomputed',
        'step_name': None,
        'type': 'patch_applied',
      }),
      dict({
        'command': 'python pipeline.py',
        'returncode': 0,
        'scenario_name': 'Update one audio - only affected speaker recomputed',
        'step_name': None,
        'type': 'command_executed',
      }),
      dict({
        'graph': dict({
          'audio': dict({
            'feature_spec': dict({
              'deps': list([
              ]),
              'fields': list([
                dict({
                  'code_version': '__metaxy_initial__',
                  'deps': list([
                  ]),
                  'key': 'default',
                }),
              ]),
              'id_columns': list([
                'audio_id',
              ]),
              'key': 'audio',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'default': '80200592cc6accc65ee0b09a7fcf4082c729a0b919cd9c3edf088eb94f27a60c',
            }),
            'metaxy_feature_version': 'c97627054100197ec6c746b0305a630569f2f13968aa53b610100a01f0991908',
          }),
          'speaker/embedding': dict({
            'feature_spec': dict({
              'deps': list([
                dict({
                  'columns': None,
                  'feature': 'audio',
                  'fields_mapping': dict({
                    'mapping': dict({
                      'exclude_fields': list([
                      ]),
                      'match_suffix': False,
                      'type': 'default',
                    }),
                  }),
                  'lineage': dict({
                    'relationship': dict({
                      'on': list([
                        'speaker_id',
                      ]),
                      'type': 'N:1',
                    }),
                  }),
                  'optional': False,
                  'rename': None,
                  'sql_filters': None,
                }),
              ]),
              'fields': list([
                dict({
                  'code_version': '1',
                  'deps': list([
                  ]),
                  'key': 'embedding',
                }),
              ]),
              'id_columns': list([
                'speaker_id',
              ]),
              'key': 'speaker/embedding',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'embedding': '8b5b20fb5aab8799f1fbf969e97e71540801d94cae081a6dbef6acbf941fd71a',
            }),
            'metaxy_feature_version': '83296faf60084eb70f7d1976367ffcc541f1149195b79bebe46dbb98a50f3bdd',
          }),
        }),
        'scenario_name': 'Add new audio - only affected speaker recomputed',
        'snapshot_version': 'd20c6813866c39ff989eee8e5d45f93f061943fe13f5a65311ff987fc7f1d7cc',
        'step_name': None,
        'type': 'graph_pushed',
      }),
      dict({
        'after_graph': dict({
          'audio': dict({
            'feature_spec': dict({
              'deps': list([
              ]),
              'fields': list([
                dict({
                  'code_version': '__metaxy_initial__',
                  'deps': list([
                  ]),
                  'key': 'default',
                }),
              ]),
              'id_columns': list([
                'audio_id',
              ]),
              'key': 'audio',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'default': '80200592cc6accc65ee0b09a7fcf4082c729a0b919cd9c3edf088eb94f27a60c',
            }),
            'metaxy_feature_version': 'c97627054100197ec6c746b0305a630569f2f13968aa53b610100a01f0991908',
          }),
          'speaker/embedding': dict({
            'feature_spec': dict({
              'deps': list([
                dict({
                  'columns': None,
                  'feature': 'audio',
                  'fields_mapping': dict({
                    'mapping': dict({
                      'exclude_fields': list([
                      ]),
                      'match_suffix': False,
                      'type': 'default',
                    }),
                  }),
                  'lineage': dict({
                    'relationship': dict({
                      'on': list([
                        'speaker_id',
                      ]),
                      'type': 'N:1',
                    }),
                  }),
                  'optional': False,
                  'rename': None,
                  'sql_filters': None,
                }),
              ]),
              'fields': list([
                dict({
                  'code_version': '1',
                  'deps': list([
                  ]),
                  'key': 'embedding',
                }),
              ]),
              'id_columns': list([
                'speaker_id',
              ]),
              'key': 'speaker/embedding',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'embedding': '8b5b20fb5aab8799f1fbf969e97e71540801d94cae081a6dbef6acbf941fd71a',
            }),
            'metaxy_feature_version': '83296faf60084eb70f7d1976367ffcc541f1149195b79bebe46dbb98a50f3bdd',
          }),
        }),
        'after_snapshot': 'd20c6813866c39ff989eee8e5d45f93f061943fe13f5a65311ff987fc7f1d7cc',
        'before_graph': dict({
          'audio': dict({
            'feature_spec': dict({
              'deps': list([
              ]),
              'fields': list([
                dict({
                  'code_version': '__metaxy_initial__',
                  'deps': list([
                  ]),
                  'key': 'default',
                }),
              ]),
              'id_columns': list([
                'audio_id',
              ]),
              'key': 'audio',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'default': '80200592cc6accc65ee0b09a7fcf4082c729a0b919cd9c3edf088eb94f27a60c',
            }),
            'metaxy_feature_version': 'c97627054100197ec6c746b0305a630569f2f13968aa53b610100a01f0991908',
          }),
          'speaker/embedding': dict({
            'feature_spec': dict({
              'deps': list([
                dict({
                  'columns': None,
                  'feature': 'audio',
                  'fields_mapping': dict({
                    'mapping': dict({
                      'exclude_fields': list([
                      ]),
                      'match_suffix': False,
                      'type': 'default',
                    }),
                  }),
                  'lineage': dict({
                    'relationship': dict({
                      'on': list([
                        'speaker_id',
                      ]),
                      'type': 'N:1',
                    }),
                  }),
                  'optional': False,
                  'rename': None,
                  'sql_filters': None,
                }),
              ]),
              'fields': list([
                dict({
                  'code_version': '1',
                  'deps': list([
                  ]),
                  'key': 'embedding',
                }),
              ]),
              'id_columns': list([
                'speaker_id',
              ]),
              'key': 'speaker/embedding',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'embedding': '8b5b20fb5aab8799f1fbf969e97e71540801d94cae081a6dbef6acbf941fd71a',
            }),
            'metaxy_feature_version': '83296faf60084eb70f7d1976367ffcc541f1149195b79bebe46dbb98a50f3bdd',
          }),
        }),
        'before_snapshot': 'd20c6813866c39ff989eee8e5d45f93f061943fe13f5a65311ff987fc7f1d7cc',
        'patch_path': 'patches/02_add_audio.patch',
        'scenario_name': 'Add new audio - only affected speaker recomputed',
        'step_name': None,
        'type': 'patch_applied',
      }),
      dict({
        'command': 'python pipeline.py',
        'returncode': 0,
        'scenario_name': 'Add new audio - only affected speaker recomputed',
        'step_name': None,
        'type': 'command_executed',
      }),
      dict({
        'command': 'python pipeline.py',
        'returncode': 0,
        'scenario_name': 'Final idempotent check',
        'step_name': None,
        'type': 'command_executed',
      }),
    ]),
  })
# ---
# name: test_example_snapshot[example-basic]
  dict({
    'events': list([
      dict({
        'graph': dict({
          'examples/child': dict({
            'feature_spec': dict({
              'deps': list([
                dict({
                  'columns': None,
                  'feature': 'examples/parent',
                  'fields_mapping': dict({
                    'mapping': dict({
                      'exclude_fields': list([
                      ]),
                      'match_suffix': False,
                      'type': 'default',
                    }),
                  }),
                  'lineage': dict({
                    'relationship': dict({
                      'type': '1:1',
                    }),
                  }),
                  'optional': False,
                  'rename': None,
                  'sql_filters': None,
                }),
              ]),
              'fields': list([
                dict({
                  'code_version': '__metaxy_initial__',
                  'deps': list([
                  ]),
                  'key': 'predictions',
                }),
              ]),
              'id_columns': list([
                'sample_uid',
              ]),
              'key': 'examples/child',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'predictions': '15e27d1ca8fad19456fd20b59e5904e79181fe6957e7b2e035bd94c6f2aa0643',
            }),
            'metaxy_feature_version': '467b2c02f5a1629d83fa892000dbc7e441d7ca5e6754d8788a2c93951951f939',
          }),
          'examples/parent': dict({
            'feature_spec': dict({
              'deps': list([
              ]),
              'fields': list([
                dict({
                  'code_version': '1',
                  'deps': list([
                  ]),
                  'key': 'embeddings',
                }),
              ]),
              'id_columns': list([
                'sample_uid',
              ]),
              'key': 'examples/parent',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'embeddings': '05e66510da58ef37168095b60188849cd6b1f0a4b539d0ac29ffd1e15b756459',
            }),
            'metaxy_feature_version': '0aad9b8a2ea055cde3c4149fc4cde576e6478a982cea75b45c3cd012db43a5e8',
          }),
        }),
        'scenario_name': 'Setup upstream data',
        'snapshot_version': '0ac29a763c520b92fd66a1622b9f340fc0b139a9134699a67c18a9efdece5cd3',
        'step_name': None,
        'type': 'graph_pushed',
      }),
      dict({
        'command': 'python -m example_basic.setup_data',
        'returncode': 0,
        'scenario_name': 'Setup upstream data',
        'step_name': 'setup_data',
        'type': 'command_executed',
      }),
      dict({
        'command': 'python -m example_basic.pipeline',
        'returncode': 0,
        'scenario_name': 'Initial pipeline run',
        'step_name': 'initial_run',
        'type': 'command_executed',
      }),
      dict({
        'command': 'python -m example_basic.pipeline',
        'returncode': 0,
        'scenario_name': 'Idempotent rerun',
        'step_name': 'idempotent_run',
        'type': 'command_executed',
      }),
      dict({
        'graph': dict({
          'examples/child': dict({
            'feature_spec': dict({
              'deps': list([
                dict({
                  'columns': None,
                  'feature': 'examples/parent',
                  'fields_mapping': dict({
                    'mapping': dict({
                      'exclude_fields': list([
                      ]),
                      'match_suffix': False,
                      'type': 'default',
                    }),
                  }),
                  'lineage': dict({
                    'relationship': dict({
                      'type': '1:1',
                    }),
                  }),
                  'optional': False,
                  'rename': None,
                  'sql_filters': None,
                }),
              ]),
              'fields': list([
                dict({
                  'code_version': '__metaxy_initial__',
                  'deps': list([
                  ]),
                  'key': 'predictions',
                }),
              ]),
              'id_columns': list([
                'sample_uid',
              ]),
              'key': 'examples/child',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'predictions': '391c5ef3b7b701ddf980431430cb1ed3b8b932c71b659cd53447a5a4a8e8888b',
            }),
            'metaxy_feature_version': '415c78486684ec5f285b05b4f0043395c0ab2ac193123c3f5b5d6bfb0b145c43',
          }),
          'examples/parent': dict({
            'feature_spec': dict({
              'deps': list([
              ]),
              'fields': list([
                dict({
                  'code_version': '2',
                  'deps': list([
                  ]),
                  'key': 'embeddings',
                }),
              ]),
              'id_columns': list([
                'sample_uid',
              ]),
              'key': 'examples/parent',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'embeddings': '3c8d3e9ba031ab3613eb4db0877d3959fce76d94d625335b89bae7fbd4f27add',
            }),
            'metaxy_feature_version': 'a007f308d0a852e3fbf80a442bd0089e29eed94efefe85231ef4fc927aa7d737',
          }),
        }),
        'scenario_name': 'Code evolution',
        'snapshot_version': '1b0b50c116514994c79e989666226a2f8b2d7c5e42b565bf5779e70f6a80fb5c',
        'step_name': 'update_parent_version',
        'type': 'graph_pushed',
      }),
      dict({
        'after_graph': dict({
          'examples/child': dict({
            'feature_spec': dict({
              'deps': list([
                dict({
                  'columns': None,
                  'feature': 'examples/parent',
                  'fields_mapping': dict({
                    'mapping': dict({
                      'exclude_fields': list([
                      ]),
                      'match_suffix': False,
                      'type': 'default',
                    }),
                  }),
                  'lineage': dict({
                    'relationship': dict({
                      'type': '1:1',
                    }),
                  }),
                  'optional': False,
                  'rename': None,
                  'sql_filters': None,
                }),
              ]),
              'fields': list([
                dict({
                  'code_version': '__metaxy_initial__',
                  'deps': list([
                  ]),
                  'key': 'predictions',
                }),
              ]),
              'id_columns': list([
                'sample_uid',
              ]),
              'key': 'examples/child',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'predictions': '391c5ef3b7b701ddf980431430cb1ed3b8b932c71b659cd53447a5a4a8e8888b',
            }),
            'metaxy_feature_version': '415c78486684ec5f285b05b4f0043395c0ab2ac193123c3f5b5d6bfb0b145c43',
          }),
          'examples/parent': dict({
            'feature_spec': dict({
              'deps': list([
              ]),
              'fields': list([
                dict({
                  'code_version': '2',
                  'deps': list([
                  ]),
                  'key': 'embeddings',
                }),
              ]),
              'id_columns': list([
                'sample_uid',
              ]),
              'key': 'examples/parent',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'embeddings': '3c8d3e9ba031ab3613eb4db0877d3959fce76d94d625335b89bae7fbd4f27add',
            }),
            'metaxy_feature_version': 'a007f308d0a852e3fbf80a442bd0089e29eed94efefe85231ef4fc927aa7d737',
          }),
        }),
        'after_snapshot': '1b0b50c116514994c79e989666226a2f8b2d7c5e42b565bf5779e70f6a80fb5c',
        'before_graph': dict({
          'examples/child': dict({
            'feature_spec': dict({
              'deps': list([
                dict({
                  'columns': None,
                  'feature': 'examples/parent',
                  'fields_mapping': dict({
                    'mapping': dict({
                      'exclude_fields': list([
                      ]),
                      'match_suffix': False,
                      'type': 'default',
                    }),
                  }),
                  'lineage': dict({
                    'relationship': dict({
                      'type': '1:1',
                    }),
                  }),
                  'optional': False,
                  'rename': None,
                  'sql_filters': None,
                }),
              ]),
              'fields': list([
                dict({
                  'code_version': '__metaxy_initial__',
                  'deps': list([
                  ]),
                  'key': 'predictions',
                }),
              ]),
              'id_columns': list([
                'sample_uid',
              ]),
              'key': 'examples/child',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'predictions': '15e27d1ca8fad19456fd20b59e5904e79181fe6957e7b2e035bd94c6f2aa0643',
            }),
            'metaxy_feature_version': '467b2c02f5a1629d83fa892000dbc7e441d7ca5e6754d8788a2c93951951f939',
          }),
          'examples/parent': dict({
            'feature_spec': dict({
              'deps': list([
              ]),
              'fields': list([
                dict({
                  'code_version': '1',
                  'deps': list([
                  ]),
                  'key': 'embeddings',
                }),
              ]),
              'id_columns': list([
                'sample_uid',
              ]),
              'key': 'examples/parent',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'embeddings': '05e66510da58ef37168095b60188849cd6b1f0a4b539d0ac29ffd1e15b756459',
            }),
            'metaxy_feature_version': '0aad9b8a2ea055cde3c4149fc4cde576e6478a982cea75b45c3cd012db43a5e8',
          }),
        }),
        'before_snapshot': '0ac29a763c520b92fd66a1622b9f340fc0b139a9134699a67c18a9efdece5cd3',
        'patch_path': 'patches/01_update_parent_algorithm.patch',
        'scenario_name': 'Code evolution',
        'step_name': 'update_parent_version',
        'type': 'patch_applied',
      }),
      dict({
        'command': 'python -m example_basic.pipeline',
        'returncode': 0,
        'scenario_name': 'Code evolution',
        'step_name': 'recompute_after_change',
        'type': 'command_executed',
      }),
    ]),
  })
# ---
# name: test_example_snapshot[example-one-to-many]
  dict({
    'events': list([
      dict({
        'graph': dict({
          'video/chunk': dict({
            'feature_spec': dict({
              'deps': list([
                dict({
                  'columns': None,
                  'feature': 'video/raw',
                  'fields_mapping': dict({
                    'mapping': dict({
                      'exclude_fields': list([
                      ]),
                      'match_suffix': False,
                      'type': 'default',
                    }),
                  }),
                  'lineage': dict({
                    'relationship': dict({
                      'id_generation_pattern': None,
                      'on': list([
                        'video_id',
                      ]),
                      'type': '1:N',
                    }),
                  }),
                  'optional': False,
                  'rename': None,
                  'sql_filters': None,
                }),
              ]),
              'fields': list([
                dict({
                  'code_version': '__metaxy_initial__',
                  'deps': list([
                  ]),
                  'key': 'audio',
                }),
                dict({
                  'code_version': '__metaxy_initial__',
                  'deps': list([
                  ]),
                  'key': 'frames',
                }),
              ]),
              'id_columns': list([
                'video_chunk_id',
              ]),
              'key': 'video/chunk',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'audio': 'd6a26940ce9ddec3b1668b1e9fbaa8079348d88f8e75a0b414dc23b2acdf62f2',
              'frames': 'b3595d64c823748e77d7dd84817b551e585ad41eed4104f0a03561698095a004',
            }),
            'metaxy_feature_version': '24b73621ecb11268cfdeeef9075686ea798ab742ed318e907afc51846d6fc335',
          }),
          'video/faces': dict({
            'feature_spec': dict({
              'deps': list([
                dict({
                  'columns': None,
                  'feature': 'video/chunk',
                  'fields_mapping': dict({
                    'mapping': dict({
                      'mapping': dict({
                        'faces': list([
                          list([
                            'frames',
                          ]),
                        ]),
                      }),
                      'type': 'specific',
                    }),
                  }),
                  'lineage': dict({
                    'relationship': dict({
                      'type': '1:1',
                    }),
                  }),
                  'optional': False,
                  'rename': None,
                  'sql_filters': None,
                }),
              ]),
              'fields': list([
                dict({
                  'code_version': '__metaxy_initial__',
                  'deps': list([
                  ]),
                  'key': 'faces',
                }),
              ]),
              'id_columns': list([
                'video_chunk_id',
              ]),
              'key': 'video/faces',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'faces': 'ffffa4c911ed0808a4ce160ebee45f5621db42cfedfcd66546b495ca902b8109',
            }),
            'metaxy_feature_version': 'ffa26c202034caf7b09c99e7c674aad22dbb321e766eb160505c72009c178c69',
          }),
          'video/raw': dict({
            'feature_spec': dict({
              'deps': list([
              ]),
              'fields': list([
                dict({
                  'code_version': '1',
                  'deps': list([
                  ]),
                  'key': 'audio',
                }),
                dict({
                  'code_version': '__metaxy_initial__',
                  'deps': list([
                  ]),
                  'key': 'frames',
                }),
              ]),
              'id_columns': list([
                'video_id',
              ]),
              'key': 'video/raw',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'audio': '7132721c121d323cea63a14fe75588f682c6def20aa566798bc4d39a09ba6829',
              'frames': '3f6f401c024073a7265874099af43b0f5a99387953e321b8337223ed99fa238b',
            }),
            'metaxy_feature_version': '697d0098c9ae72d28c4dbb0ab30d1f0bc19c4f1c65e2b53a587a2f762d6ec897',
          }),
        }),
        'scenario_name': 'Initial pipeline run',
        'snapshot_version': '39a7f29e64ae839c4711dbc8bc55c4dd35daf0cd33663934d4ef7049e02b2512',
        'step_name': None,
        'type': 'graph_pushed',
      }),
      dict({
        'command': 'python pipeline.py',
        'returncode': 0,
        'scenario_name': 'Initial pipeline run',
        'step_name': 'initial_run',
        'type': 'command_executed',
      }),
      dict({
        'command': 'python pipeline.py',
        'returncode': 0,
        'scenario_name': 'Idempotent rerun',
        'step_name': 'idempotent_run',
        'type': 'command_executed',
      }),
      dict({
        'graph': dict({
          'video/chunk': dict({
            'feature_spec': dict({
              'deps': list([
                dict({
                  'columns': None,
                  'feature': 'video/raw',
                  'fields_mapping': dict({
                    'mapping': dict({
                      'exclude_fields': list([
                      ]),
                      'match_suffix': False,
                      'type': 'default',
                    }),
                  }),
                  'lineage': dict({
                    'relationship': dict({
                      'id_generation_pattern': None,
                      'on': list([
                        'video_id',
                      ]),
                      'type': '1:N',
                    }),
                  }),
                  'optional': False,
                  'rename': None,
                  'sql_filters': None,
                }),
              ]),
              'fields': list([
                dict({
                  'code_version': '__metaxy_initial__',
                  'deps': list([
                  ]),
                  'key': 'audio',
                }),
                dict({
                  'code_version': '__metaxy_initial__',
                  'deps': list([
                  ]),
                  'key': 'frames',
                }),
              ]),
              'id_columns': list([
                'video_chunk_id',
              ]),
              'key': 'video/chunk',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'audio': '0295dd3807b0fb3c9cebe4839a8a458b704383552303239e730be079a789c3ed',
              'frames': 'b3595d64c823748e77d7dd84817b551e585ad41eed4104f0a03561698095a004',
            }),
            'metaxy_feature_version': '850c45aafe6e5f8c3c86b43140d0acdda7c09b183e3be03fa181affa149f1245',
          }),
          'video/faces': dict({
            'feature_spec': dict({
              'deps': list([
                dict({
                  'columns': None,
                  'feature': 'video/chunk',
                  'fields_mapping': dict({
                    'mapping': dict({
                      'mapping': dict({
                        'faces': list([
                          list([
                            'frames',
                          ]),
                        ]),
                      }),
                      'type': 'specific',
                    }),
                  }),
                  'lineage': dict({
                    'relationship': dict({
                      'type': '1:1',
                    }),
                  }),
                  'optional': False,
                  'rename': None,
                  'sql_filters': None,
                }),
              ]),
              'fields': list([
                dict({
                  'code_version': '__metaxy_initial__',
                  'deps': list([
                  ]),
                  'key': 'faces',
                }),
              ]),
              'id_columns': list([
                'video_chunk_id',
              ]),
              'key': 'video/faces',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'faces': 'ffffa4c911ed0808a4ce160ebee45f5621db42cfedfcd66546b495ca902b8109',
            }),
            'metaxy_feature_version': 'ffa26c202034caf7b09c99e7c674aad22dbb321e766eb160505c72009c178c69',
          }),
          'video/raw': dict({
            'feature_spec': dict({
              'deps': list([
              ]),
              'fields': list([
                dict({
                  'code_version': '2',
                  'deps': list([
                  ]),
                  'key': 'audio',
                }),
                dict({
                  'code_version': '__metaxy_initial__',
                  'deps': list([
                  ]),
                  'key': 'frames',
                }),
              ]),
              'id_columns': list([
                'video_id',
              ]),
              'key': 'video/raw',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'audio': 'f8e35296ab91bb55e8086317ef2d3be6763c77680390f85111e16213e11cb784',
              'frames': '3f6f401c024073a7265874099af43b0f5a99387953e321b8337223ed99fa238b',
            }),
            'metaxy_feature_version': 'e467986af8f5566e1a4597e541851e8ff759552d8d993883effe3f09a17ed9ac',
          }),
        }),
        'scenario_name': 'Code change - audio field only',
        'snapshot_version': '9f349eecf490e4d105c15621be4f048ea7e163ac97298d695948cffb9e31ce83',
        'step_name': 'update_audio_version',
        'type': 'graph_pushed',
      }),
      dict({
        'after_graph': dict({
          'video/chunk': dict({
            'feature_spec': dict({
              'deps': list([
                dict({
                  'columns': None,
                  'feature': 'video/raw',
                  'fields_mapping': dict({
                    'mapping': dict({
                      'exclude_fields': list([
                      ]),
                      'match_suffix': False,
                      'type': 'default',
                    }),
                  }),
                  'lineage': dict({
                    'relationship': dict({
                      'id_generation_pattern': None,
                      'on': list([
                        'video_id',
                      ]),
                      'type': '1:N',
                    }),
                  }),
                  'optional': False,
                  'rename': None,
                  'sql_filters': None,
                }),
              ]),
              'fields': list([
                dict({
                  'code_version': '__metaxy_initial__',
                  'deps': list([
                  ]),
                  'key': 'audio',
                }),
                dict({
                  'code_version': '__metaxy_initial__',
                  'deps': list([
                  ]),
                  'key': 'frames',
                }),
              ]),
              'id_columns': list([
                'video_chunk_id',
              ]),
              'key': 'video/chunk',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'audio': '0295dd3807b0fb3c9cebe4839a8a458b704383552303239e730be079a789c3ed',
              'frames': 'b3595d64c823748e77d7dd84817b551e585ad41eed4104f0a03561698095a004',
            }),
            'metaxy_feature_version': '850c45aafe6e5f8c3c86b43140d0acdda7c09b183e3be03fa181affa149f1245',
          }),
          'video/faces': dict({
            'feature_spec': dict({
              'deps': list([
                dict({
                  'columns': None,
                  'feature': 'video/chunk',
                  'fields_mapping': dict({
                    'mapping': dict({
                      'mapping': dict({
                        'faces': list([
                          list([
                            'frames',
                          ]),
                        ]),
                      }),
                      'type': 'specific',
                    }),
                  }),
                  'lineage': dict({
                    'relationship': dict({
                      'type': '1:1',
                    }),
                  }),
                  'optional': False,
                  'rename': None,
                  'sql_filters': None,
                }),
              ]),
              'fields': list([
                dict({
                  'code_version': '__metaxy_initial__',
                  'deps': list([
                  ]),
                  'key': 'faces',
                }),
              ]),
              'id_columns': list([
                'video_chunk_id',
              ]),
              'key': 'video/faces',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'faces': 'ffffa4c911ed0808a4ce160ebee45f5621db42cfedfcd66546b495ca902b8109',
            }),
            'metaxy_feature_version': 'ffa26c202034caf7b09c99e7c674aad22dbb321e766eb160505c72009c178c69',
          }),
          'video/raw': dict({
            'feature_spec': dict({
              'deps': list([
              ]),
              'fields': list([
                dict({
                  'code_version': '2',
                  'deps': list([
                  ]),
                  'key': 'audio',
                }),
                dict({
                  'code_version': '__metaxy_initial__',
                  'deps': list([
                  ]),
                  'key': 'frames',
                }),
              ]),
              'id_columns': list([
                'video_id',
              ]),
              'key': 'video/raw',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'audio': 'f8e35296ab91bb55e8086317ef2d3be6763c77680390f85111e16213e11cb784',
              'frames': '3f6f401c024073a7265874099af43b0f5a99387953e321b8337223ed99fa238b',
            }),
            'metaxy_feature_version': 'e467986af8f5566e1a4597e541851e8ff759552d8d993883effe3f09a17ed9ac',
          }),
        }),
        'after_snapshot': '9f349eecf490e4d105c15621be4f048ea7e163ac97298d695948cffb9e31ce83',
        'before_graph': dict({
          'video/chunk': dict({
            'feature_spec': dict({
              'deps': list([
                dict({
                  'columns': None,
                  'feature': 'video/raw',
                  'fields_mapping': dict({
                    'mapping': dict({
                      'exclude_fields': list([
                      ]),
                      'match_suffix': False,
                      'type': 'default',
                    }),
                  }),
                  'lineage': dict({
                    'relationship': dict({
                      'id_generation_pattern': None,
                      'on': list([
                        'video_id',
                      ]),
                      'type': '1:N',
                    }),
                  }),
                  'optional': False,
                  'rename': None,
                  'sql_filters': None,
                }),
              ]),
              'fields': list([
                dict({
                  'code_version': '__metaxy_initial__',
                  'deps': list([
                  ]),
                  'key': 'audio',
                }),
                dict({
                  'code_version': '__metaxy_initial__',
                  'deps': list([
                  ]),
                  'key': 'frames',
                }),
              ]),
              'id_columns': list([
                'video_chunk_id',
              ]),
              'key': 'video/chunk',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'audio': 'd6a26940ce9ddec3b1668b1e9fbaa8079348d88f8e75a0b414dc23b2acdf62f2',
              'frames': 'b3595d64c823748e77d7dd84817b551e585ad41eed4104f0a03561698095a004',
            }),
            'metaxy_feature_version': '24b73621ecb11268cfdeeef9075686ea798ab742ed318e907afc51846d6fc335',
          }),
          'video/faces': dict({
            'feature_spec': dict({
              'deps': list([
                dict({
                  'columns': None,
                  'feature': 'video/chunk',
                  'fields_mapping': dict({
                    'mapping': dict({
                      'mapping': dict({
                        'faces': list([
                          list([
                            'frames',
                          ]),
                        ]),
                      }),
                      'type': 'specific',
                    }),
                  }),
                  'lineage': dict({
                    'relationship': dict({
                      'type': '1:1',
                    }),
                  }),
                  'optional': False,
                  'rename': None,
                  'sql_filters': None,
                }),
              ]),
              'fields': list([
                dict({
                  'code_version': '__metaxy_initial__',
                  'deps': list([
                  ]),
                  'key': 'faces',
                }),
              ]),
              'id_columns': list([
                'video_chunk_id',
              ]),
              'key': 'video/faces',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'faces': 'ffffa4c911ed0808a4ce160ebee45f5621db42cfedfcd66546b495ca902b8109',
            }),
            'metaxy_feature_version': 'ffa26c202034caf7b09c99e7c674aad22dbb321e766eb160505c72009c178c69',
          }),
          'video/raw': dict({
            'feature_spec': dict({
              'deps': list([
              ]),
              'fields': list([
                dict({
                  'code_version': '1',
                  'deps': list([
                  ]),
                  'key': 'audio',
                }),
                dict({
                  'code_version': '__metaxy_initial__',
                  'deps': list([
                  ]),
                  'key': 'frames',
                }),
              ]),
              'id_columns': list([
                'video_id',
              ]),
              'key': 'video/raw',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'audio': '7132721c121d323cea63a14fe75588f682c6def20aa566798bc4d39a09ba6829',
              'frames': '3f6f401c024073a7265874099af43b0f5a99387953e321b8337223ed99fa238b',
            }),
            'metaxy_feature_version': '697d0098c9ae72d28c4dbb0ab30d1f0bc19c4f1c65e2b53a587a2f762d6ec897',
          }),
        }),
        'before_snapshot': '39a7f29e64ae839c4711dbc8bc55c4dd35daf0cd33663934d4ef7049e02b2512',
        'patch_path': 'patches/01_update_video_code_version.patch',
        'scenario_name': 'Code change - audio field only',
        'step_name': 'update_audio_version',
        'type': 'patch_applied',
      }),
      dict({
        'command': 'python pipeline.py',
        'returncode': 0,
        'scenario_name': 'Code change - audio field only',
        'step_name': 'recompute_after_audio_change',
        'type': 'command_executed',
      }),
      dict({
        'command': 'python pipeline.py',
        'returncode': 0,
        'scenario_name': 'Final idempotent check',
        'step_name': 'final_idempotent_check',
        'type': 'command_executed',
      }),
    ]),
  })
# ---
# name: test_example_snapshot[example-overview]
  dict({
    'events': list([
      dict({
        'graph': dict({
          'example/crop': dict({
            'feature_spec': dict({
              'deps': list([
                dict({
                  'columns': None,
                  'feature': 'example/video',
                  'fields_mapping': dict({
                    'mapping': dict({
                      'exclude_fields': list([
                      ]),
                      'match_suffix': False,
                      'type': 'default',
                    }),
                  }),
                  'lineage': dict({
                    'relationship': dict({
                      'type': '1:1',
                    }),
                  }),
                  'optional': False,
                  'rename': None,
                  'sql_filters': None,
                }),
              ]),
              'fields': list([
                dict({
                  'code_version': '1',
                  'deps': list([
                    dict({
                      'feature': 'example/video',
                      'fields': list([
                        'audio',
                      ]),
                    }),
                  ]),
                  'key': 'audio',
                }),
                dict({
                  'code_version': '1',
                  'deps': list([
                    dict({
                      'feature': 'example/video',
                      'fields': list([
                        'frames',
                      ]),
                    }),
                  ]),
                  'key': 'frames',
                }),
              ]),
              'id_columns': list([
                'sample_uid',
              ]),
              'key': 'example/crop',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'audio': '76c8bdc9545524e878ed4d9890587551b6c3154251cdfcca9049cbacf112cc39',
              'frames': 'abc79017997391ffa25bdf04cbab84d77fdd22f4d2d78b914acad0662915e086',
            }),
            'metaxy_feature_version': '3ac04df8f6503f82cbcd06f0e1cc5f4589c9bacb065b7edf22cd9567ad302c63',
          }),
          'example/face_detection': dict({
            'feature_spec': dict({
              'deps': list([
                dict({
                  'columns': None,
                  'feature': 'example/crop',
                  'fields_mapping': dict({
                    'mapping': dict({
                      'exclude_fields': list([
                      ]),
                      'match_suffix': False,
                      'type': 'default',
                    }),
                  }),
                  'lineage': dict({
                    'relationship': dict({
                      'type': '1:1',
                    }),
                  }),
                  'optional': False,
                  'rename': None,
                  'sql_filters': None,
                }),
              ]),
              'fields': list([
                dict({
                  'code_version': '1',
                  'deps': list([
                    dict({
                      'feature': 'example/crop',
                      'fields': list([
                        'frames',
                      ]),
                    }),
                  ]),
                  'key': 'faces',
                }),
              ]),
              'id_columns': list([
                'sample_uid',
              ]),
              'key': 'example/face_detection',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'faces': '2d75f0bd5be71867c23389d26bbd00eba2f3498dfff334dc0bbcaa9ec3893b07',
            }),
            'metaxy_feature_version': '1ac83b074c018d1524eb51cf7f19734175b34c72f8289b6b90015f4a0ab9e2ce',
          }),
          'example/stt': dict({
            'feature_spec': dict({
              'deps': list([
                dict({
                  'columns': None,
                  'feature': 'example/video',
                  'fields_mapping': dict({
                    'mapping': dict({
                      'exclude_fields': list([
                      ]),
                      'match_suffix': False,
                      'type': 'default',
                    }),
                  }),
                  'lineage': dict({
                    'relationship': dict({
                      'type': '1:1',
                    }),
                  }),
                  'optional': False,
                  'rename': None,
                  'sql_filters': None,
                }),
              ]),
              'fields': list([
                dict({
                  'code_version': '1',
                  'deps': list([
                    dict({
                      'feature': 'example/video',
                      'fields': list([
                        'audio',
                      ]),
                    }),
                  ]),
                  'key': 'transcription',
                }),
              ]),
              'id_columns': list([
                'sample_uid',
              ]),
              'key': 'example/stt',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'transcription': 'ac412b3c78c2f910127bdd1511cf08ff0fe9324a80c0fe0503f2edabb22960d2',
            }),
            'metaxy_feature_version': 'c83a754a1749050d358b0e2572a7f3538ab5e76e18222f4c23dd7ef96e50b162',
          }),
          'example/video': dict({
            'feature_spec': dict({
              'deps': list([
              ]),
              'fields': list([
                dict({
                  'code_version': '1',
                  'deps': list([
                  ]),
                  'key': 'audio',
                }),
                dict({
                  'code_version': '1',
                  'deps': list([
                  ]),
                  'key': 'frames',
                }),
              ]),
              'id_columns': list([
                'sample_uid',
              ]),
              'key': 'example/video',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'audio': '2274238132e8ddf5b2f64bd926e35f3dbcf910e45f49a0d1f3383b1a28421b49',
              'frames': '794116a95021306600942624e8f40f8166c9ff87bb155835685c26a72a32fd85',
            }),
            'metaxy_feature_version': 'bc9ca8356b1b8d2e2e25455bc8d0d4c51d00dfe826f08df38bbf8df0042fc890',
          }),
        }),
        'scenario_name': 'Initial feature graph',
        'snapshot_version': '8468950dcc9f75e4089529577e7b8ba044205e16a7c32b54910e7c73b9f7303d',
        'step_name': None,
        'type': 'graph_pushed',
      }),
      dict({
        'command': 'metaxy graph push',
        'returncode': 0,
        'scenario_name': 'Initial feature graph',
        'step_name': 'push_graph',
        'type': 'command_executed',
      }),
      dict({
        'command': 'metaxy graph render --format mermaid',
        'returncode': 0,
        'scenario_name': 'Initial feature graph',
        'step_name': 'render_graph',
        'type': 'command_executed',
      }),
      dict({
        'graph': dict({
          'example/crop': dict({
            'feature_spec': dict({
              'deps': list([
                dict({
                  'columns': None,
                  'feature': 'example/video',
                  'fields_mapping': dict({
                    'mapping': dict({
                      'exclude_fields': list([
                      ]),
                      'match_suffix': False,
                      'type': 'default',
                    }),
                  }),
                  'lineage': dict({
                    'relationship': dict({
                      'type': '1:1',
                    }),
                  }),
                  'optional': False,
                  'rename': None,
                  'sql_filters': None,
                }),
              ]),
              'fields': list([
                dict({
                  'code_version': '1',
                  'deps': list([
                    dict({
                      'feature': 'example/video',
                      'fields': list([
                        'audio',
                      ]),
                    }),
                  ]),
                  'key': 'audio',
                }),
                dict({
                  'code_version': '1',
                  'deps': list([
                    dict({
                      'feature': 'example/video',
                      'fields': list([
                        'frames',
                      ]),
                    }),
                  ]),
                  'key': 'frames',
                }),
              ]),
              'id_columns': list([
                'sample_uid',
              ]),
              'key': 'example/crop',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'audio': 'f3130c0fc1eb3967dbe4ed248be5b935334260f7afc5e0d878a5022c77b3475a',
              'frames': 'abc79017997391ffa25bdf04cbab84d77fdd22f4d2d78b914acad0662915e086',
            }),
            'metaxy_feature_version': '54dc7f8a47f2e4430707310fecc57101785040403680402b0013f5160024ee42',
          }),
          'example/face_detection': dict({
            'feature_spec': dict({
              'deps': list([
                dict({
                  'columns': None,
                  'feature': 'example/crop',
                  'fields_mapping': dict({
                    'mapping': dict({
                      'exclude_fields': list([
                      ]),
                      'match_suffix': False,
                      'type': 'default',
                    }),
                  }),
                  'lineage': dict({
                    'relationship': dict({
                      'type': '1:1',
                    }),
                  }),
                  'optional': False,
                  'rename': None,
                  'sql_filters': None,
                }),
              ]),
              'fields': list([
                dict({
                  'code_version': '1',
                  'deps': list([
                    dict({
                      'feature': 'example/crop',
                      'fields': list([
                        'frames',
                      ]),
                    }),
                  ]),
                  'key': 'faces',
                }),
              ]),
              'id_columns': list([
                'sample_uid',
              ]),
              'key': 'example/face_detection',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'faces': '2d75f0bd5be71867c23389d26bbd00eba2f3498dfff334dc0bbcaa9ec3893b07',
            }),
            'metaxy_feature_version': '1ac83b074c018d1524eb51cf7f19734175b34c72f8289b6b90015f4a0ab9e2ce',
          }),
          'example/stt': dict({
            'feature_spec': dict({
              'deps': list([
                dict({
                  'columns': None,
                  'feature': 'example/video',
                  'fields_mapping': dict({
                    'mapping': dict({
                      'exclude_fields': list([
                      ]),
                      'match_suffix': False,
                      'type': 'default',
                    }),
                  }),
                  'lineage': dict({
                    'relationship': dict({
                      'type': '1:1',
                    }),
                  }),
                  'optional': False,
                  'rename': None,
                  'sql_filters': None,
                }),
              ]),
              'fields': list([
                dict({
                  'code_version': '1',
                  'deps': list([
                    dict({
                      'feature': 'example/video',
                      'fields': list([
                        'audio',
                      ]),
                    }),
                  ]),
                  'key': 'transcription',
                }),
              ]),
              'id_columns': list([
                'sample_uid',
              ]),
              'key': 'example/stt',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'transcription': '058410137e1449468fe9cc6e170f5fe3182cd12083b2172dd99a9731ebcf5f69',
            }),
            'metaxy_feature_version': '066d34fcb84150b926500d1ba1172f53e3506643c743d4403a19128a6ae17fc1',
          }),
          'example/video': dict({
            'feature_spec': dict({
              'deps': list([
              ]),
              'fields': list([
                dict({
                  'code_version': '2',
                  'deps': list([
                  ]),
                  'key': 'audio',
                }),
                dict({
                  'code_version': '1',
                  'deps': list([
                  ]),
                  'key': 'frames',
                }),
              ]),
              'id_columns': list([
                'sample_uid',
              ]),
              'key': 'example/video',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'audio': '09c8398bb8d6ef79c622cec3f7ee402cd55ad577a6002ddb7cd377b1a4af4377',
              'frames': '794116a95021306600942624e8f40f8166c9ff87bb155835685c26a72a32fd85',
            }),
            'metaxy_feature_version': '6db302e5be0167551ad6a00df92e10a54ea63d7a6f393d420eeb23f24b540b10',
          }),
        }),
        'scenario_name': 'Code change - audio field',
        'snapshot_version': '980943fbb9465022ca100716e64670fbbd80ef63636d4c23f18318454a77db4c',
        'step_name': 'update_audio_version',
        'type': 'graph_pushed',
      }),
      dict({
        'after_graph': dict({
          'example/crop': dict({
            'feature_spec': dict({
              'deps': list([
                dict({
                  'columns': None,
                  'feature': 'example/video',
                  'fields_mapping': dict({
                    'mapping': dict({
                      'exclude_fields': list([
                      ]),
                      'match_suffix': False,
                      'type': 'default',
                    }),
                  }),
                  'lineage': dict({
                    'relationship': dict({
                      'type': '1:1',
                    }),
                  }),
                  'optional': False,
                  'rename': None,
                  'sql_filters': None,
                }),
              ]),
              'fields': list([
                dict({
                  'code_version': '1',
                  'deps': list([
                    dict({
                      'feature': 'example/video',
                      'fields': list([
                        'audio',
                      ]),
                    }),
                  ]),
                  'key': 'audio',
                }),
                dict({
                  'code_version': '1',
                  'deps': list([
                    dict({
                      'feature': 'example/video',
                      'fields': list([
                        'frames',
                      ]),
                    }),
                  ]),
                  'key': 'frames',
                }),
              ]),
              'id_columns': list([
                'sample_uid',
              ]),
              'key': 'example/crop',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'audio': 'f3130c0fc1eb3967dbe4ed248be5b935334260f7afc5e0d878a5022c77b3475a',
              'frames': 'abc79017997391ffa25bdf04cbab84d77fdd22f4d2d78b914acad0662915e086',
            }),
            'metaxy_feature_version': '54dc7f8a47f2e4430707310fecc57101785040403680402b0013f5160024ee42',
          }),
          'example/face_detection': dict({
            'feature_spec': dict({
              'deps': list([
                dict({
                  'columns': None,
                  'feature': 'example/crop',
                  'fields_mapping': dict({
                    'mapping': dict({
                      'exclude_fields': list([
                      ]),
                      'match_suffix': False,
                      'type': 'default',
                    }),
                  }),
                  'lineage': dict({
                    'relationship': dict({
                      'type': '1:1',
                    }),
                  }),
                  'optional': False,
                  'rename': None,
                  'sql_filters': None,
                }),
              ]),
              'fields': list([
                dict({
                  'code_version': '1',
                  'deps': list([
                    dict({
                      'feature': 'example/crop',
                      'fields': list([
                        'frames',
                      ]),
                    }),
                  ]),
                  'key': 'faces',
                }),
              ]),
              'id_columns': list([
                'sample_uid',
              ]),
              'key': 'example/face_detection',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'faces': '2d75f0bd5be71867c23389d26bbd00eba2f3498dfff334dc0bbcaa9ec3893b07',
            }),
            'metaxy_feature_version': '1ac83b074c018d1524eb51cf7f19734175b34c72f8289b6b90015f4a0ab9e2ce',
          }),
          'example/stt': dict({
            'feature_spec': dict({
              'deps': list([
                dict({
                  'columns': None,
                  'feature': 'example/video',
                  'fields_mapping': dict({
                    'mapping': dict({
                      'exclude_fields': list([
                      ]),
                      'match_suffix': False,
                      'type': 'default',
                    }),
                  }),
                  'lineage': dict({
                    'relationship': dict({
                      'type': '1:1',
                    }),
                  }),
                  'optional': False,
                  'rename': None,
                  'sql_filters': None,
                }),
              ]),
              'fields': list([
                dict({
                  'code_version': '1',
                  'deps': list([
                    dict({
                      'feature': 'example/video',
                      'fields': list([
                        'audio',
                      ]),
                    }),
                  ]),
                  'key': 'transcription',
                }),
              ]),
              'id_columns': list([
                'sample_uid',
              ]),
              'key': 'example/stt',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'transcription': '058410137e1449468fe9cc6e170f5fe3182cd12083b2172dd99a9731ebcf5f69',
            }),
            'metaxy_feature_version': '066d34fcb84150b926500d1ba1172f53e3506643c743d4403a19128a6ae17fc1',
          }),
          'example/video': dict({
            'feature_spec': dict({
              'deps': list([
              ]),
              'fields': list([
                dict({
                  'code_version': '2',
                  'deps': list([
                  ]),
                  'key': 'audio',
                }),
                dict({
                  'code_version': '1',
                  'deps': list([
                  ]),
                  'key': 'frames',
                }),
              ]),
              'id_columns': list([
                'sample_uid',
              ]),
              'key': 'example/video',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'audio': '09c8398bb8d6ef79c622cec3f7ee402cd55ad577a6002ddb7cd377b1a4af4377',
              'frames': '794116a95021306600942624e8f40f8166c9ff87bb155835685c26a72a32fd85',
            }),
            'metaxy_feature_version': '6db302e5be0167551ad6a00df92e10a54ea63d7a6f393d420eeb23f24b540b10',
          }),
        }),
        'after_snapshot': '980943fbb9465022ca100716e64670fbbd80ef63636d4c23f18318454a77db4c',
        'before_graph': dict({
          'example/crop': dict({
            'feature_spec': dict({
              'deps': list([
                dict({
                  'columns': None,
                  'feature': 'example/video',
                  'fields_mapping': dict({
                    'mapping': dict({
                      'exclude_fields': list([
                      ]),
                      'match_suffix': False,
                      'type': 'default',
                    }),
                  }),
                  'lineage': dict({
                    'relationship': dict({
                      'type': '1:1',
                    }),
                  }),
                  'optional': False,
                  'rename': None,
                  'sql_filters': None,
                }),
              ]),
              'fields': list([
                dict({
                  'code_version': '1',
                  'deps': list([
                    dict({
                      'feature': 'example/video',
                      'fields': list([
                        'audio',
                      ]),
                    }),
                  ]),
                  'key': 'audio',
                }),
                dict({
                  'code_version': '1',
                  'deps': list([
                    dict({
                      'feature': 'example/video',
                      'fields': list([
                        'frames',
                      ]),
                    }),
                  ]),
                  'key': 'frames',
                }),
              ]),
              'id_columns': list([
                'sample_uid',
              ]),
              'key': 'example/crop',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'audio': '76c8bdc9545524e878ed4d9890587551b6c3154251cdfcca9049cbacf112cc39',
              'frames': 'abc79017997391ffa25bdf04cbab84d77fdd22f4d2d78b914acad0662915e086',
            }),
            'metaxy_feature_version': '3ac04df8f6503f82cbcd06f0e1cc5f4589c9bacb065b7edf22cd9567ad302c63',
          }),
          'example/face_detection': dict({
            'feature_spec': dict({
              'deps': list([
                dict({
                  'columns': None,
                  'feature': 'example/crop',
                  'fields_mapping': dict({
                    'mapping': dict({
                      'exclude_fields': list([
                      ]),
                      'match_suffix': False,
                      'type': 'default',
                    }),
                  }),
                  'lineage': dict({
                    'relationship': dict({
                      'type': '1:1',
                    }),
                  }),
                  'optional': False,
                  'rename': None,
                  'sql_filters': None,
                }),
              ]),
              'fields': list([
                dict({
                  'code_version': '1',
                  'deps': list([
                    dict({
                      'feature': 'example/crop',
                      'fields': list([
                        'frames',
                      ]),
                    }),
                  ]),
                  'key': 'faces',
                }),
              ]),
              'id_columns': list([
                'sample_uid',
              ]),
              'key': 'example/face_detection',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'faces': '2d75f0bd5be71867c23389d26bbd00eba2f3498dfff334dc0bbcaa9ec3893b07',
            }),
            'metaxy_feature_version': '1ac83b074c018d1524eb51cf7f19734175b34c72f8289b6b90015f4a0ab9e2ce',
          }),
          'example/stt': dict({
            'feature_spec': dict({
              'deps': list([
                dict({
                  'columns': None,
                  'feature': 'example/video',
                  'fields_mapping': dict({
                    'mapping': dict({
                      'exclude_fields': list([
                      ]),
                      'match_suffix': False,
                      'type': 'default',
                    }),
                  }),
                  'lineage': dict({
                    'relationship': dict({
                      'type': '1:1',
                    }),
                  }),
                  'optional': False,
                  'rename': None,
                  'sql_filters': None,
                }),
              ]),
              'fields': list([
                dict({
                  'code_version': '1',
                  'deps': list([
                    dict({
                      'feature': 'example/video',
                      'fields': list([
                        'audio',
                      ]),
                    }),
                  ]),
                  'key': 'transcription',
                }),
              ]),
              'id_columns': list([
                'sample_uid',
              ]),
              'key': 'example/stt',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'transcription': 'ac412b3c78c2f910127bdd1511cf08ff0fe9324a80c0fe0503f2edabb22960d2',
            }),
            'metaxy_feature_version': 'c83a754a1749050d358b0e2572a7f3538ab5e76e18222f4c23dd7ef96e50b162',
          }),
          'example/video': dict({
            'feature_spec': dict({
              'deps': list([
              ]),
              'fields': list([
                dict({
                  'code_version': '1',
                  'deps': list([
                  ]),
                  'key': 'audio',
                }),
                dict({
                  'code_version': '1',
                  'deps': list([
                  ]),
                  'key': 'frames',
                }),
              ]),
              'id_columns': list([
                'sample_uid',
              ]),
              'key': 'example/video',
              'metadata': dict({
              }),
            }),
            'fields': dict({
              'audio': '2274238132e8ddf5b2f64bd926e35f3dbcf910e45f49a0d1f3383b1a28421b49',
              'frames': '794116a95021306600942624e8f40f8166c9ff87bb155835685c26a72a32fd85',
            }),
            'metaxy_feature_version': 'bc9ca8356b1b8d2e2e25455bc8d0d4c51d00dfe826f08df38bbf8df0042fc890',
          }),
        }),
        'before_snapshot': '8468950dcc9f75e4089529577e7b8ba044205e16a7c32b54910e7c73b9f7303d',
        'patch_path': 'patches/01_update_audio_version.patch',
        'scenario_name': 'Code change - audio field',
        'step_name': 'update_audio_version',
        'type': 'patch_applied',
      }),
      dict({
        'command': 'metaxy graph-diff render latest current --format mermaid',
        'returncode': 0,
        'scenario_name': 'Code change - audio field',
        'step_name': 'render_diff',
        'type': 'command_executed',
      }),
    ]),
  })
# ---
